Made code generic, some documentation and updated README.md with setup details

--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
                 <configuration>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <webApp>
-                        <contextPath>/hello</contextPath>
+                        <contextPath>/ff4j-poc</contextPath>
                     </webApp>
                     <httpConnector>
                         <port>8080</port>
