--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,14 @@
 	http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ak.ff4j</groupId>
-    <artifactId>ff4j-pocs</artifactId>
+    <artifactId>ff4j-poc</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>ff4j-pocs</name>
+    <name>ff4j-poc</name>
 
     <properties>
         <spring.version>5.0.6.RELEASE</spring.version>
+        <spring-security.version>5.0.6.RELEASE</spring-security.version>
     </properties>
 
     <dependencies>
@@ -34,6 +35,26 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!-- spring security dependencies -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring-security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>4.2.7.RELEASE</version>
+        </dependency>
+
+        <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -54,6 +75,7 @@
             <version>1.5</version>
         </dependency>
 
+        <!-- servlets -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -74,6 +96,18 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- logging -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
     </dependencies>
 
 
@@ -89,20 +123,20 @@
                         <contextPath>/ff4j-poc</contextPath>
                     </webApp>
                     <httpConnector>
-                        <port>8080</port>
+                        <port>7070</port>
                     </httpConnector>
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                    <showWarnings>true</showWarnings>
-                </configuration>
-            </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
 
         </plugins>
     </build>
